# YMap

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md  Trunk.toml  YMap-website.code-workspace  YMap.code-workspace  db.template.toml  index.html  index.scss  init.surql  init.surql.rs  run.nu  rustfmt.toml  secrets_template.rs  test.nu  yit.rs  yitattrs.rs  yitignore.rs
.cargo/: config.toml
app/: .gitignore  Cargo.toml  Trunk.toml  index.html
app/cli/: Cargo.toml
app/cli/src/: cli.rs  grass.rs  leptosfmt.rs  main.rs  stylance.rs
app/public/: bundled.css
app/src/: app.rs  brand.rs  db.rs  error.rs  error.scss  errors.rs  hydrate.rs  index.scss  lib.rs  main.rs  prelude.rs  rendering_state.rs  server_state.rs  stripe.rs  utils.rs
app/src/app/: description.rs  explore.rs  explore.scss  latex_demo.rs  login.rs  things.rs
app/src/components/: article.scss  components.rs  icons.rs
app/src/components/about/: About.md  about.rs
app/src/components/accounts/: accounts.module.scss  accounts.rs  logout.rs
app/src/components/cart/: cart.rs  state.rs
app/src/components/db_conn/: db_conn.rs
app/src/db/: cartridges.rs  dbusers.rs  orders.rs  reviews.rs
app/styles/: brand.scss  build.nu  index.scss  main.scss  prio.scss  reset.scss  stylers.css  watch.nu
cas/: Cargo.toml
cas/src/: contexts.rs  latex.rs  lib.rs  pass.rs
crates/bevy_hints/: Cargo.toml  README.md  this_is_only_a_hint.md
crates/bevy_hints/src/: lib.rs
crates/cargo-docker-build/: Cargo.toml  README.md  docker.nu
crates/cargo-docker-build/src/: lib.rs  main.rs
crates/schoolbox-scrape/: .gitignore  Cargo.toml  README.md  build.rs
crates/schoolbox-scrape/src/: cookie.txt  lib.rs  main.rs
crates/testing-winit/: .gitignore  Cargo.toml
crates/testing-winit/.cargo/: config.toml
crates/testing-winit/src/: lib.rs
crates/testing-winit/xcode/: .gitignore
crates/xcode_build_rs/: CHANGELOG.md  Cargo.toml  README.md  plan.json
crates/xcode_build_rs/.cargo/: config.toml
crates/xcode_build_rs/src/: lib.rs  main.rs  path.txt
crates/yauth/: Cargo.toml
crates/yauth/examples/: web_ui.rs
crates/yauth/src/: _main.rs  auth_conn.rs  auth_connection.rs  cmds.rs  config.rs  configs.rs  connection.rs  error.rs  leptos_ui.rs  lib.rs  main.rs  signin.rs  signout.rs  signup.rs  types.rs
crates/ymap/: .gitignore  Cargo.toml  README.md  build_rust_deps.nu  build_rust_deps.sh  bundle.nu  db.nu  db.surql  start-db.nu
crates/ymap-config/: Cargo.toml
crates/ymap-config/src/: lib.rs  secrets.rs
crates/ymap/.cargo/: config.toml
crates/ymap/YMap.xcodeproj/: project.pbxproj
crates/ymap/src/: camera.rs  consts.rs  debug.rs  input.rs  lib.rs  scribble_pad.rs  utils.rs
crates/ymap/xcode/: .gitignore
crates/yscribble/: .gitignore  Cargo.toml
crates/yscribble/bevy_yscribble_3d/: .gitignore  Cargo.toml
crates/yscribble/src/: complete_lines.rs  data.rs  lib.rs  partial_line.rs  pos.rs
crates/ysurreal/: .gitignore  Cargo.toml  README.md  test.nu
crates/ysurreal/src/: config.rs  configs.rs  lib.rs  main.rs  production.rs  testing.rs
crates/yxcode_build/: Cargo.toml
crates/yxcode_build/src/: main.rs
db/: .gitignore  Cargo.toml
db/cli/: Cargo.toml
db/cli/src/: cli.rs  lib.rs  main.rs
db/layers/: Cargo.toml
db/layers/src/: lib.rs
db/src/: auth.rs  cartridges.rs  common.rs  conn.rs  connect.rs  creds.rs  db.rs  error.rs  errors.rs  inventory.rs  invoice.rs  layers.rs  lib.rs  orders.rs  reviews.rs  search.rs  select.rs  sendle.rs  support.rs  thing.rs  user.rs  users.rs
db/src/cartridges/: actions.rs  brand.rs  canon.json  colours.rs  db.rs  epson.json  hp.json  id.rs  known.nu  model.rs  tech.rs
db/src/orders/: cart.rs  db.rs  order.rs  product_order.rs
db/src/reviews/: db.rs
db/src/thing/: id.rs  payload.rs  well_known.rs
db/tests/: cartridges.rs  orders.rs  reviews.rs  shared.rs  thing.rs  users.rs
dioxus/: Cargo.toml  Dioxus.toml
dioxus/assets/: main.css
dioxus/src/: components.rs  errors.rs  main.rs  prelude.rs
dioxus/src/components/: db.rs  explore.rs  main.css  main.rs  navbar.css  navbar.rs  sidebar.css  sidebar.rs  thing.css  thing.rs
generic-error/: Cargo.toml  README.md
generic-error/examples/: ext-traits.rs  simple.rs
generic-error/src/: lib.rs
mathquill-leptos/: Cargo.toml
mathquill-leptos/mathquill-js-sys/: Cargo.toml
mathquill-leptos/mathquill-js-sys/src/: lib.rs
mathquill-leptos/src/: components.rs  lib.rs
mathquill/js/: Cargo.toml  README.md
mathquill/js-sys/: Cargo.toml  README.md  loading.md
mathquill/js-sys/src/: builder.rs  lib.rs
mathquill/js/examples/: field.rs  static.rs
mathquill/js/src/: lib.rs
mathquill/leptos/: .gitignore  Cargo.toml  README.md  index.html
mathquill/leptos/examples/: field.rs  static.rs
mathquill/leptos/src/: components.rs  lib.rs
server/: Cargo.toml
server/cli/: Cargo.toml
server/cli/src/: args.rs  cli.rs  lib.rs  main.rs  paths.rs  server_commands.rs  spueue.rs
server/src/: csp.rs  https.rs  lib.rs  main.rs
thing/: Cargo.toml  expanded.rs
thing/macros/: Cargo.toml
thing/macros/src/: lib.rs
thing/src/: errors.rs  id.rs  lib.rs  parent.rs  payload.rs  prelude.rs  well_known.rs
thing/tests/: thing.rs
utils/: Cargo.toml
utils/src/: background.rs  cmds.rs  lib.rs  paths.rs  prelude.rs  project_paths.rs  tracing.rs
utils/src/cmds/: local.rs  ssh.rs
utils/src/paths/: local.rs  remote.rs
utils/src/project_paths/: project.rs  server.rs
utils/src/tools/: cargo_leptos.rs  cp.rs  kill.rs  mod.rs  rsync.rs  scp.rs
web/: Cargo.toml
web/src/: app.rs  hydrate.rs  lib.rs  prelude.rs
website/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dockerignore  config.toml  docker.nu
website-csr/: .gitignore  Cargo.toml  README.md  Trunk.toml
website-csr/src/: app.rs  main.rs
website-csr/src/pages/: mod.rs
website/.cargo/: config.toml
website/.zed/: settings.json
website/src/: app.rs  error.rs  error_template.rs  lib.rs  main.rs  state.rs
website/src/pages/: logged_in.rs  login.rs  mod.rs  welcome.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  lib.rs  main.rs
(+219 files in other folders)
