[package]
name = "yit"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["ystd"]

[[bin]]
name = "yit"
path = ".yit/yit.rs"

[workspace.dependencies]
ystd = { path = "./ystd" }

[dependencies]
alloy = "1.0.9"
alloy-primitives = { version = "1.2.1", features = ["tiny-keccak"] }
bevy_reflect = { version = "0.16.1", features = ["functions"] }
camino = "1.1.10"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealdb = "2.3.6"
time = { version = "0.3.41", features = ["macros", "formatting"] }
tokio = { version = "1.45.1", features = [
	"fs",
	"macros",
	"rt-multi-thread",
	"time",
	"tracing",
] }
toml_edit = "0.22.27"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
	"fmt",
	"time",
	"env-filter",
	"json",
] }
url = "2.5.4"
ystd.workspace = true

[lints]
workspace = true

[workspace.lints.rust]
unused_imports = "allow"
irrefutable_let_patterns = "allow"
async_fn_in_trait = "allow"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
