[package]
edition = "2024"
name = "app"
version = "0.1.0"
publish = false

[features]

[dependencies]
utils = { workspace = true }
mathquill-leptos = { workspace = true }
cas.workspace = true
latex-parser.workspace = true
getrandom = { version = "0.3", features = ["wasm_js"] }
leptos_meta = { version = "0.7.8", features = ["tracing"] }
leptos = { version = "0.7.8", features = ["csr", "tracing"] }
leptos-use = { version = "0.15.7", features = [] }
color-eyre = "0.6.3"
console_error_panic_hook = "0.1.7"
surrealdb = "2.2.1"
tokio = { version = "1.44.1", default-features = false, features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
url = "2.5.4"
tracing = "0.1.41"
thiserror = "2.0.12"
leptos_router = "0.7.8"
thing.workspace = true
db.workspace = true
generic-err = { workspace = true }
email_address = "0.2.9"
tokio-stream = "0.1.17"
