[package]
edition = "2024"
name = "app"
version = "0.1.0"
publish = false

[features]

[dependencies]
utils = { workspace = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
leptos = { version = "0.7.8", features = ["csr", "tracing"] }
console_error_panic_hook = "0.1.7"
surrealdb = "2.2.1"
serde = { version = "1.0.219", features = ["derive"] }
url = "2.5.4"
tracing = "0.1.41"
thiserror = "2.0.12"
leptos_router = "0.7.8"
thing.workspace = true
generic-err = { workspace = true }
email_address = "0.2.9"
tokio-stream = "0.1.17"
color-eyre = "0.6.3"
