[package]
name = "cas"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
utils.workspace = true
latex-parser.workspace = true
thing.workspace = true
bevy_ecs = "0.15.3"
bevy_reflect = "0.15.3"
num = "0.4.3"
thiserror = "2.0.12"
nonzero_lit = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
