[package]
name = "db"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = "2.2.1"
thiserror = "2.0.12"
url = "2.5.4"
utils = { workspace = true }

[dev-dependencies]
color-eyre = "0.6.3"
tokio = { version = "1.44.1", features = ["full"] }
