[package]
name = "db"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
utils = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealdb = "2.2.1"
thiserror = "2.0.12"
url = "2.5.4"
serde-content = "0.1.2"
surrealdb-layers.workspace = true
extension-traits = "2.0.0"
thing.workspace = true
email_address = "0.2.9"
futures-core = "0.3.31"
async-stream = "0.3.6"

[dev-dependencies]
color-eyre = "0.6.3"
tokio = { version = "1.44.1", features = ["full"] }
