[package]
name = "dioxus"
version = "0.1.0"
authors = ["Caleb Yates <calebyates42@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
generic-err.workspace = true
getrandom = { version = "0.3", features = ["wasm_js"] }
surrealdb = "2.2.2"
thing.workspace = true
thiserror = "2.0.12"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
