[package]
name = "generic-err"
version = "0.1.0"
edition = "2024"
description = "A small utility library to make errors always serializable and clonable"
readme = "README.md"
license = "GPL-2.0"
documentation = "https://docs.rs/generic-err"
repository = "https://github.com/ActuallyHappening/YMap/tree/master/generic-error"

[dependencies]
extension-traits = "2.0.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }

[dev-dependencies]
thiserror = "2.0.12"
