[package]
name = "thing"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = "2.2.1"
tracing = "0.1.41"
surrealdb-layers.workspace = true
db.workspace = true
extension-traits = "2.0.0"
thiserror = "2.0.12"

[dev-dependencies]
color-eyre = "0.6.3"
tokio = { version = "1.44.2", features = ["full"] }
