[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[features]
default = ["cli"]
cli = ["dep:clap"]
cli-support = ["cli"]

[dependencies]
env = { workspace = true, features = [] }
bossy = "0.2.1"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.31", features = ["derive"], optional = true }
color-eyre = "0.6.3"
convert_case = "0.7.1"
extension-traits = "2.0.0"
openssh = { version = "0.11.5", features = ["native-mux", "tracing"] }
rustls = { version = "0.23.23", features = ["aws-lc-rs"] }
serde = { version = "1.0.218", features = ["derive"] }
shell-escape = "0.1.5"
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["local-offset", "macros"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "fmt",
    "env-filter",
    "time",
] }
which = "7.0.2"
