[package]
name = "web"
version = "0.1.0"
edition = "2024"

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr",
    "leptos-use/axum",
    "dep:axum",
]
prod = []

[dependencies]
utils = { workspace = true, default-features = false }
leptos = { version = "0.7.0", features = ["delegation"] }
leptos_router = { version = "0.7.0" }
console_error_panic_hook = "0.1"
leptos_meta = { version = "0.7.0" }
wasm-bindgen = "=0.2.100"
leptos-use = { version = "0.15.5", features = ["use_window_scroll"] }
axum = { version = "0.7.9", optional = true, features = ["macros"] }
web-sys = { version = "0.3.77", features = [
    "HtmlDocument",
    "Location",
    "Window",
] }
tracing-wasm = "0.2.1"
