[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
repository.workspace = true

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
openssh = { version = "0.11.4", features = ["tracing"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
db-credentials.workspace = true

[lints]
workspace = true
