[package]
name = "bevy_hints"
description = "Hints for future bevy editors to improve usability"
license = "MIT"
documentation = "docs.rs/bevy_hints"
homepage = "docs.rs/bevy_hints"
repository = "github.com/ActuallyHappening/YMap"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_color = "0.14.3"
bevy_ecs = "0.14.2"
bevy_reflect = "0.14.2"

[lints]
workspace = true
