[package]
name = "schoolbox-scrape"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
color-eyre = "0.6.3"
reqwest = { version = "0.12.9", features = ["cookies"] }
scraper = "0.21.0"
surrealdb = "2.0.4"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
