[package]
name = "schoolbox-scrape"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
camino = "1.1.9"
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
csv = "1.3.1"
itertools = "0.13.0"
reqwest = { version = "0.12.9", features = ["cookies"] }
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
surrealdb = "2.0.4"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
