[package]
name = "testing-winit"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.scripts]
open-xcode = "open xcode/*.xcodeproj"

[dependencies.bevy]
version = "0.14.0-dev"
path = "../../../bevy"

[dependencies]
winit = "0.30.3"

[patch.crates-io.winit]
path = "../../../winit"
version = "0.30.3"

[package.metadata.xcode-build-rs.ios]
## Ignores noisy logs, see https://github.com/rust-windowing/winit/pull/3762
extra-flags = ["--cfg", "winit_ignore_noise_logs_unstable"]