[package]
name = "xcode-build-rs"
version = "0.1.0"
edition = "2021"
description = "Build script for xcode when compiling rust in XCode"

[dependencies]
bossy = "0.2.1"
camino = "1.1.7"
clap = { version = "4.5.7", features = ["cargo", "derive", "env"] }
color-eyre = "0.6.3"
dirs = "5.0.1"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
which = "6.0.1"

[lints]
workspace = true

[features]
default = ["tracing-subscriber/ansi"]

# [profile.dev.package.backtrace]
# opt-level = 3
