[package]
name = "yauth"
version = "0.1.0"
edition = "2021"

[dependencies]
ysurreal.workspace = true
clap = { version = "4.5.8", features = ["derive", "env"] }
garde = { version = "0.19.2", features = ["derive", "email"] }
serde = { version = "1.0.203", features = ["derive"] }
surrealdb = { workspace = true, features = ["protocol-http"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
tracing-error = "0.2.0"
color-eyre = "0.6.3"
serde_json = "1.0.119"

[lints]
workspace = true

[dev-dependencies]
serde_json = "1.0.119"
