[package]
name = "yauth"
version = "0.1.0"
edition = "2021"

[dependencies]
ysurreal.workspace = true
clap = { version = "4.5.8", features = ["derive", "env"] }
garde = { version = "0.19.2", features = ["derive", "email"] }
serde = { version = "1.0.203", features = ["derive"] }
surrealdb = { workspace = true, features = ["protocol-http"] }
thiserror = "1.0.61"
tokio.workspace = true
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
tracing-error = "0.2.0"
color-eyre = "0.6.3"
serde_json = "1.0.119"
rand = "0.8.5"
leptos = { version = "0.6.12", optional = true }
console_error_panic_hook = "0.1.7"

[features]
default = ["leptos-ui"]
leptos-ui = ["dep:leptos"]

[lints]
workspace = true

[dev-dependencies]
serde_json = "1.0.119"

[[example]]
name = "web_ui"
required-features = ["web_ui"]
