[package]
name = "ymap"
version = "0.1.0"
edition = "2021"
description = "test-ios app"
default-run = "ymap"
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_editor_pls.workspace = true
bevy_yscribble_3d.workspace = true
bevy_cosmic_edit = { version = "0.20.0", features = ["multicam"] }
bevy_egui = "0.27.1"
derive_more = "0.99.17"
tracing = "0.1.40"

[package.metadata.bundle]
identifier = "com.ymap.test-ios69"
resources = ["assets"]

[package.metadata.scripts]
open-xcode = "open xcode/*.xcodeproj"
# open-app = "open xcode/build/Debug-iphoneos/YMap.app"

[lints]
workspace = true