[package]
name = "ymap"
version = "0.1.0"
edition = "2021"
description = "test-ios app"
default-run = "ymap"
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
ios = []

[package.metadata.xcode-build-rs.ios]
## What features to enable for `io` builds, see `xcode-build-rs` for more information
features = ["ios"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_editor_pls.workspace = true
bevy_yscribble_3d.workspace = true
bevy_cosmic_edit = { version = "0.20.0", features = ["multicam"] }
bevy_egui = "0.27.1"
derive_more = "0.99.17"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bevy_replicon = "0.26.3"
bevy_replicon_renet = "0.3.0"
clap = { version = "4.5.7", features = ["derive"] }
color-eyre = "0.6.3"
serde = { version = "1.0.203", features = ["derive"] }

[package.metadata.bundle]
identifier = "com.ymap.test-ios69"
resources = ["assets"]

[package.metadata.scripts]
open-xcode = "open xcode/*.xcodeproj"
# open-app = "open xcode/build/Debug-iphoneos/YMap.app"
xcb = "xcode-build-rs --colour test"

[lints]
workspace = true
