[package]
name = "yscribble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = ["dep:bevy"]
default = ["bevy"]

[dependencies]
bevy = { workspace = true, optional = true }
serde = { version = "1.0.203", features = ["derive"] }
glam = "*"
tracing = "0.1.40"

[lints]
workspace = true