[package]
name = "ysurreal"
version = "0.1.0"
edition = "2021"

[dependencies]
bossy = "0.2.1"
camino = "1.1.7"
clap = { version = "4.5.8", features = ["derive", "env"] }
color-eyre = "0.6.3"
rand = "0.8.5"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

## COPIED from main Cargo.toml
# for non-wasm builds
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
which = "6.0.1"
tokio = { version = "1.29.1", features = ["full"] }
surrealdb = { workspace = true, features = ["kv-mem", "protocol-http"] }

# for wasm builds
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.29.1", features = ["sync", "macros", "rt"] }
surrealdb = { workspace = true }
getrandom = { version = "0.2.9", features = ["js"] }

[lints]
workspace = true
