[package]
name = "yxcode_build"
version = "0.1.0"
edition = "2021"
description = "Build script for xcode when compiling rust in XCode"

[dependencies]
camino = "1.1.7"
color-eyre = "0.6.3"
dirs = "5.0.1"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }

[lints]
workspace = true

# [profile.dev.package.backtrace]
# opt-level = 3
