[package]
name = "mathquill-js-sys"
version = "0.1.0"
edition = "2024"
description = "Wraps the MathQuill JS library for raw access in Rust"
repository = "https://github.com/ActuallyHappening/YMap"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = { version = "0.2.100", features = ["strict-macro"] }
web-sys = "0.3.77"
