[package]
name = "mathquill-js-sys"
description = "Raw JavaScript bindings for MathQuill"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ActuallyHappening/YMap/tree/master/mathquill"
keywords = ["javascript", "mathquill", "bindings"]
categories = ["web-programming", "wasm", "api-bindings"]
readme = "README.md"
license = "GPL-2.0"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
wasm-bindgen = { version = "0.2.100" }
web-sys = { version = "0.3.77", features = ["HtmlElement"] }
