[package]
name = "mathquill-js"
description = "Idiomatic JavaScript bindings for MathQuill"
version = "0.1.0"
authors = ["Caleb Yates <calebyates42@gmail.com>"]
edition = "2021"
readme = "README.md"

[dependencies.mathquill-js-sys]
path = "../js-sys"
version = "0.1.0"

[dependencies]
tracing = "0.1.41"
web-sys = "0.3.77"
