[package]
name = "mathquill-js"
description = "Idiomatic JavaScript bindings for MathQuill"
version = "0.1.3"
edition = "2021"
authors = ["Caleb Yates <calebyates42@gmail.com>"]
repository = "https://github.com/ActuallyHappening/YMap/tree/master/mathquill"
keywords = ["mathquill", "mathquill-js"]
categories = ["web-programming", "wasm", "api-bindings"]
readme = "README.md"
license = "GPL-2.0"

[dependencies.mathquill-js-sys]
path = "../js-sys"
version = "0.1.1"

[dependencies]
tracing = "0.1.41"
web-sys = "0.3.77"
