[package]
name = "mathquill-leptos"
version = "0.1.0"
edition = "2024"
description = "A mathquill integration layer for Leptos"
repository = "https://github.com/ActuallyHappening/YMap"
keywords = ["math", "mathquill", "leptos"]

[dependencies.mathquill-js]
path = "../js"
version = "0.1.0"

[dependencies]
leptos = "0.7.8"
tracing = "0.1.41"
web-sys = "0.3.77"
