[package]
name = "mathquill-leptos"
version = "0.1.3"
edition = "2024"
description = "A mathquill integration layer for Leptos"
repository = "https://github.com/ActuallyHappening/YMap/tree/master/mathquill"
keywords = ["math", "mathquill", "mathquill-js", "leptos"]
categories = ["web-programming", "wasm", "api-bindings"]
readme = "README.md"
license = "GPL-2.0"
exclude = ["dist", "index.html"]

[dependencies.mathquill-js]
path = "../js"
version = "0.1.0"

[dependencies]
leptos = "0.7.8"
tracing = "0.1.41"
web-sys = "0.3.77"

[dev-dependencies]
# for examples
leptos = { version = "0.7.8", features = ["csr"] }
